# LinkScheduleCostume

./: .gitignore  CLAUDE.md  platformio.ini  requirements.md
.claude/: settings.local.json
core/: position_engine.cpp  position_engine.h  schedule_module.cpp  schedule_module.h
include/: config.h  display_manager.h  position_engine.h  schedule_module.h  time_manager.h  wifi_manager.h
simulation/: README.md
simulation/bindings/: CMakeLists.txt  pybind11_wrapper.cpp
simulation/python/: controls.py  gui.py  led_display.py  main.py
src/: display_manager.cpp  main.cpp  position_engine.cpp  schedule_module.cpp  time_manager.cpp  wifi_manager.cpp
